Created labels to appear just at the top of the screen once the image is recognized, These are 3 textview and not reneerables, the visibility settings have been altered for them to show. Commented out previous code to create label(renderables) as the label appear but it appears facing down, need to change the orientation if I want to go with that approach to showcase the labels.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AR Application</string>
+    <string name="fit_image_to_scan">Fit image to scan</string>
+
 </resources>
