Added an accounts page to the main toolbar the user can access accounts page from the menu, also set up the accounts page with a toolbar giving the user an option to either go back to the menu page or logout. Removed the logout method from the menu toolbar, so now the user has to access the accounts page to logout of the application.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="reg_login_text">Already have an account?</string>
     <string name="reg_password">Enter Password</string>
     <string name="reg_confirm_pass">Confirm Password</string>
-
+    <string name="sendAccount">Account</string>
+    <string name="accountToMenu">Menu</string>
 
 
 </resources>
