--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,13 @@
     <string name="reg_confirm_pass">Confirm Password</string>
     <string name="sendAccount">Account</string>
     <string name="accountToMenu">Menu</string>
+    <string name="setup_name_hint">Your name....</string>
+    <string name="setup_name_btn">Save name</string>
+    <string name="setup_Name">Name</string>
+    <string name="name_hint">Your name.....</string>
+    <string name="setup_School">School....</string>
+    <string name="setup_School_Year">Your school year (i.e. Third Year)....</string>
+    <string name="setup_Button">"Save "</string>
 
 
 </resources>
