Added a Google account sign in feature, if a user has a gmail account then can sign into the using that email instead of the creating a new account.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="pass_hint">Password....</string>
     <string name="email_hint">Your Email....</string>
     <string name="login_btn_text">Login</string>
-    <string name="login_reg_btn_text">Need a New Account?</string>
+    <string name="login_reg_btn_text">Create Account?</string>
     <string name="muscle_btn">Muscle</string>
     <string name="musclesBtn">Muscle</string>
     <string name="bonesBtn">Bone</string>
